add: create utils.h header file with debugging and printing macros

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,22 +13,22 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-upload_port = /dev/ttyUSB1 ;Change to COM1, COM2, etc for Windows Machines
-extra_scripts = 
-    pre:build/env_load.py
-    pre:build/build.py
+upload_port = /dev/ttyUSB0 ;Change to COM1, COM2, etc for Windows Machines
+; extra_scripts = 
+;     pre:build/env_load.py
+;     pre:build/build.py
 ; The following script runs on the flash env. It gets the wifi creds from stdin.
 ; Passes creds as compile time vars. Executes a POST request to the API to add it to the man table. 
 ; extra_scripts =
 ;     pre:build/build.py
-lib_deps =
-    mikem/RadioHead
-    WiFi
-    NTPClient
-    WiFiManager
-    HTTPClient
-    ArduinoJson
-    ESP32Ping
+; lib_deps =
+;     mikem/RadioHead
+;     WiFi
+;     NTPClient
+;     WiFiManager
+;     HTTPClient
+;     ArduinoJson
+;     ESP32Ping
 
 [env:compile] ;Use compile env for compiling code into firmware.bin
 platform = espressif32
