fix: updated pio config file to use radiohead lib in compile env

--- a/platformio.ini
+++ b/platformio.ini
@@ -35,3 +35,11 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
+lib_deps =
+    mikem/RadioHead
+;     WiFi
+;     NTPClient
+;     WiFiManager
+;     HTTPClient
+;     ArduinoJson
+;     ESP32Ping
