mod: copy over HTTP communication functionality and related data structures

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ framework = arduino
 monitor_speed = 115200
 lib_deps =
     mikem/RadioHead
+    bblanchon/ArduinoJson@^7.4.1
 
 [env:compile] ;Use compile env for compiling code into firmware.bin
 platform = espressif32
@@ -23,3 +24,4 @@ framework = arduino
 monitor_speed = 115200
 lib_deps =
     mikem/RadioHead
+    bblanchon/ArduinoJson@^7.4.1
