add: added ntp time retrieval, will run our main_app every x hours.

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,8 @@ framework = arduino
 monitor_speed = 115200
 lib_deps =
     mikem/RadioHead
+    NTPClient
+    WiFi
 
 [env:compile] ;Use compile env for compiling code into firmware.bin
 platform = espressif32
