--- a/.github/workflows/CN001-SN001-BUILD.yml
+++ b/.github/workflows/CN001-SN001-BUILD.yml
@@ -24,5 +24,5 @@ jobs:
         run: |
           idf.py fullclean build
       - name: Upload BIN
-        run: /
+        run: |
           curl -X PUT build/firmware-idf.bin https://df-ota.in-maa-1.linodeobjects.com/firmware2.bin
