--- a/.github/workflows/CN001-SN001-BUILD.yml
+++ b/.github/workflows/CN001-SN001-BUILD.yml
@@ -20,11 +20,7 @@ jobs:
           HASH=$(git rev-parse --short HEAD)
           FW_VERSION="g$HASH"
           echo "FW_VERSION=$FW_VERSION" >> $GITHUB_ENV
-
           FW_URL="https://df-ota.in-maa-1.linodeobjects.com/images/${FW_VERSION}.bin"
-
-          # Create version.json with URL
-          echo "{\"version\": \"$FW_VERSION\", \"url\": \"$FW_URL\"}" > version.json
 
       - name: Install ESP-IDF
         uses: espressif/install-esp-idf-action@v1
@@ -33,14 +29,10 @@ jobs:
 
       - name: Build ESP-IDF project
         run: |
-          idf.py fullclean build
+          idf.py fullclean build -D PROJECT_VER=$FW_VERSION
 
       - name: Upload BIN and version.json to Linode Object Storage
         run: |
           echo "Uploading firmware ${FW_VERSION}.bin ..."
           curl -X PUT -T build/firmware-idf.bin \
             https://df-ota.in-maa-1.linodeobjects.com/images/${FW_VERSION}.bin
-          echo "Uploading version.json ..."
-          curl -X PUT -T version.json \
-            https://df-ota.in-maa-1.linodeobjects.com/version.json
-          echo "Upload complete ✅"
