--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 4.0)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 
-set(PROJECT_VER "0.0.0")
+# set(PROJECT_VER "0.0.0")
 
 
 set(COMPONENTS main esp_eth)
